Fix issue where "address" text was not centered

--- a/src/styles.css
+++ b/src/styles.css
@@ -175,6 +175,10 @@ input:focus {
   gap: 1.5rem;
 }
 
+.address {
+  text-align: center;
+}
+
 .temperature {
   flex-direction: column;
 }
